css changes to fix overflow and scrolling pass view height

--- a/client/src/components/chat/ChatScreen.css
+++ b/client/src/components/chat/ChatScreen.css
@@ -6,6 +6,7 @@
 
 .chat-contacts-container {
   width: 21%;
+  height: 100%;
 }
 
 .chat-header {
@@ -17,7 +18,7 @@
 }
 
 .chat-contacts-body {
-  height: 100%;
+  height: 75%;
   position: relative;
   top: 12%;
 }
@@ -28,15 +29,21 @@
 }
 
 .chat-body {
-  height: 100vh;
+  height: 100%;
   width: 79%;
   background-color: rgb(219, 233, 246);
-  padding: 2%;
+  padding: 0 2%;
+  overflow: hidden;
 }
 
 .chat-message-container {
   position: relative;
   left: 3%;
+  height: 90%;
+}
+
+.chat-message-body {
+  height: 100%;
 }
 
 .chat-text-container {
@@ -44,7 +51,6 @@
   width: 95%;
   justify-content: center;
   position: relative;
-  top: 85%;
   left: 3%;
 }
 
@@ -74,4 +80,10 @@
   width: 15px;
   background-color: #5fec6b;
   border-radius: 50%;
+}
+
+#no-contacts-selected {
+  position: relative;
+  left: 45%;
+  top: 50%;
 }
